# neighbors

./: .gitignore  Cargo.toml  README.md  README.org
benches/: my_benchmark.rs
data/25/87bf60-cbe7-44bc-a2f0-c369b329f968/: CLO.xyz
docs/: neighbors.odt
examples/: demo.rs
scripts/: test_ase_neighborlist.py
src/: aperiodic.rs  lib.rs  neighborhood.rs  neighbors.rs  periodic.rs
tests/: periodic.rs  test_neighbors.rs  update.rs
tests/files/: Co10.cif
