# cargo

# [[file:~/Workspace/Programming/gchemol-rs/neighbors/neighbors.note::*cargo][cargo:1]]
[package]
name = "gchemol-neighbors"
version = "0.0.7"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
edition = "2018"
description = "Neighborhood search for chemistry"
homepage = "https://github.com/gchemol/neighbors"
repository = "https://github.com/gchemol/neighbors"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = ["bin/*", "docs/*", "ltxpng/*", ".ltximg/*"]

[dependencies]
indexmap = "1"
octree = "0.0.6"
vecfx = { version="0.0.8", features = ["nalgebra"] }
lattice = { version="0.0.6", package="gchemol-lattice" }

[dev-dependencies]
timeit = "0.1"
rayon = "1"
approx = "0.3"
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[features]
adhoc = [] # for adhoc hacking
# cargo:1 ends here
