# [[file:neighbors.note::6a47f78c][6a47f78c]]
[package]
name = "gchemol-neighbors"
version = "0.1.1"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
edition = "2021"
description = "Neighborhood search for chemistry"
homepage = "https://github.com/gchemol/neighbors"
repository = "https://github.com/gchemol/neighbors"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = ["bin/*", "docs/*", "ltxpng/*", ".ltximg/*"]

[dependencies]
indexmap = "1"
octree = "0.1"
vecfx = { version="0.1", features = ["nalgebra"] }
lattice = { version="0.1", package="gchemol-lattice" }

[dev-dependencies]
timeit = "0.1"
rayon = "1"
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[features]
adhoc = [] # for adhoc hacking
# 6a47f78c ends here
